<resources>
    <string name="app_name">Mineable</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="reset">RESET</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
</resources>