<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_33"
        android:src="@drawable/forgot_password_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_22"
        android:fontFamily="@font/robotobold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin" />

    <EditText
        android:id="@+id/edtMail"
        android:layout_width="@dimen/dimen_343"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_37"
        android:background="@drawable/disabled_frame"
        android:drawableStart="@drawable/ic_contacts"
        android:drawablePadding="12dp"
        android:fontFamily="@font/robotoregular"
        android:paddingStart="12dp"
        android:hint="example@email.com"
        android:textColor="#1A4F8B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        android:layout_width="@dimen/dimen_343"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="40.5dp"
        android:text="@string/reset"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/aldrichregular"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMail"
        />

    <TextView
        android:id="@+id/txtAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login_here"
        android:layout_marginTop="202.5dp"
        android:fontFamily="@font/robotomedium"
        app:layout_constraintTop_toBottomOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />




</androidx.constraintlayout.widget.ConstraintLayout>